# VoiceROS2

./: .gitignore  .gitmodules  README.md
docker/: Dockerfile  build.sh  compose.yaml
scripts/: gpsr.py  gpsr_voice_cloning.py  voice_cloning.py
voice_ros2/: CMakeLists.txt  package.xml
voice_ros2/launch/: voice_ros2.launch.py
voice_ros2/params/: default.yaml
